--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".StartActivity" />
-        <activity
-            android:name=".RegisterActivity"
+        <activity android:name=".RegisterActivity"
             android:parentActivityName=".StartActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".StatusActivity"></activity>
-    </application>
+        <activity android:name=".StatusActivity"
+            android:parentActivityName=".SettingsActivity"></activity>
+     </application>
 
 </manifest>
