--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.2.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
